--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* CSS */
+
 body {
   background-color: #cadefc;
   display: grid;
@@ -6,56 +8,25 @@ body {
   font-family: sans-serif;
 }
 
-#city,
-#temperature,
-#units {
+#city {
   border: 2px solid #000000;
   max-width: 150px;
   border-radius: 30px;
+  border-color: #9932cc;
   text-align: center;
   margin-top: 50px;
   font-size: 20px;
 }
 
-#city {
-  border-image: linear-gradient(
-      to bottom right,
-      rgb(255 46 144),
-      rgb(61 35 185)
-    )
-    1;
-}
-
 #temperature {
+  border: 2px solid #000000;
+  max-width: 400px;
+  border-radius: 100px;
+  border-color: #9932cc;
+  text-align: center;
+  margin-top: 50px;
   font-size: 20px;
   position: relative;
   right: -300px;
-  top: -112px;
-  border-image: linear-gradient(
-      to bottom right,
-      rgb(255 46 144),
-      rgb(61 35 185)
-    )
-    1;
+  bottom: 80px;
 }
-.icon {
-  max-width: 180px;
-  text-align: center;
-  font-size: 25px;
-  margin-top: 150px;
-}
-
-
-.btn-group {
-  position: fixed;
-  text-align: left;
-  margin-top: 20px;
-  margin-left: 1200px;
-}
-#date {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-#open-source {
-  margin-left: 128px;
-}
-
